--- a/game.html
+++ b/game.html
@@ -1,43 +1,101 @@
-<!DOCTYPE html>
-<html>
-	<!--
-	Gsme JS Lab HTML file
-	You should download this file for your lab, but you should not edit its contents.
-	-->
-
-	<head>
-		<title>Maze!</title>
-		
-		<!-- provided files; do not modify -->
-		<link href="game.css" type="text/css" rel="stylesheet" />
-		
-		<!-- your code -->
-		<script src="game.js" type="text/javascript"></script>
-	</head>
-
-	<body>
-		<h1>The Amazing Mouse Game!</h1>
-		<h2 id="status">Begin by moving your mouse over the "S".</h2>
-		
-		<!-- This part of the page represents the road -->
-		<div id="game">
-			<div id="start">S</div>
-			<div class="boundary" id="boundary1"></div>
-			<div class="boundary"></div>
-			<div class="boundary"></div>
-			<div class="boundary"></div>
-			<div class="boundary"></div>
-			<div id="end">E</div>
-		</div>
-		
-		<p>
-			The object of this game is to guide the mouse cursor through the start area and get to the end area.  Be sure to avoid the walls:
-		</p>
-		
-		<div class="boundary example"></div>
-		
-		<p>
-			Good luck!
-		</p>
-	</body>
-</html>
+<!DOCTYPE html>
+
+<html>
+
+	<!--
+
+	Gsme JS Lab HTML file
+
+	You should download this file for your lab, but you should not edit its contents.
+
+	-->
+
+
+
+	<head>
+
+		<title>Maze!</title>
+
+		
+
+		<!-- provided files; do not modify -->
+
+		<link href="game.css" type="text/css" rel="stylesheet" />
+
+		
+
+		<!-- your code -->
+
+		<script src="game.js" type="text/javascript"></script>
+
+	</head>
+
+
+
+	<body>
+
+		<h1>The Amazing Mouse Game!</h1>
+
+		<h2 id="status">Begin by moving your mouse over the "S".</h2>
+
+		
+
+		<!-- This part of the page represents the road -->
+
+		<div id="game">
+
+			<div id="start">S</div>
+
+			<div class="boundary" id="boundary1"></div>
+
+			<div class="boundary"></div>
+
+			<div class="boundary"></div>
+
+			<div class="boundary"></div>
+
+			<div class="boundary"></div>
+
+			<div id="end">E</div>
+
+		</div>
+
+		<!-- This part is for the timers -->
+
+		<div id="timer">
+			<div class="time">
+				<h4>Live</h4>
+				00:00
+			</div>
+			<div class="time">
+				<h4>Last</h4>
+				00:00
+			</div>
+			<div class="time">
+				<h4>Best</h4>
+				00:00
+			</div>
+		</div>
+
+		<p>
+
+			The object of this game is to guide the mouse cursor through the start area and get to the end area.  Be sure to avoid the walls:
+
+		</p>
+
+		
+
+		<div class="boundary example"></div>
+
+		
+
+		<p>
+
+			Good luck!
+
+		</p>
+
+	</body>
+
+</html>
+
