Changed time fields classes to ids

--- a/game.html
+++ b/game.html
@@ -63,15 +63,15 @@
 		<!-- This part is for the timers -->
 
 		<div id="timer">
-			<div class="time">
+			<div id="live-time">
 				<h4>Live</h4>
 				00:00
 			</div>
-			<div class="time">
+			<div id="last-time">
 				<h4>Last</h4>
 				00:00
 			</div>
-			<div class="time">
+			<div id="best-time">
 				<h4>Best</h4>
 				00:00
 			</div>
